--- a/home.css
+++ b/home.css
@@ -1,10 +1,5 @@
-body {
-    margin: 0;
-    padding: 0%;
-}
-
 .homepage {
-    background-color: #1e1e1e;
+    background-color: #000000;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -12,7 +7,7 @@ body {
   }
   
   .homepage .div {
-    background-color: #1e1e1e;
+    background-color: #000000;
     overflow: hidden;
     width: 1440px;
     height: 3019px;
@@ -449,3 +444,4 @@ body {
     letter-spacing: 0;
     line-height: normal;
   }
+  
