--- a/sites/musiclib/musiclib_main.css
+++ b/sites/musiclib/musiclib_main.css
@@ -66,12 +66,12 @@ a:active {
 
 @font-face {
   font-family: "redhatdisp" ;
-  src: url('/resources/fonts/rhd.ttf');
+  src: url('resources/fonts/rhd.ttf');
 }
 
 @font-face {
   font-family: "redhatdispB" ;
-  src: url('/resources/fonts/rhd_bld.ttf');
+  src: url('resources/fonts/rhd_bld.ttf');
 }
 
 @font-face {
@@ -81,12 +81,12 @@ a:active {
 
 @font-face {
   font-family: "redhatdispEXB" ;
-  src: url('/resources/fonts/rhd_exb.ttf');
+  src: url('resources/fonts/rhd_exb.ttf');
 }
 
 @font-face {
   font-family: "redhatdispI" ;
-  src: url('/resources/fonts/rhd_italic.ttf');
+  src: url('resources/fonts/rhd_italic.ttf');
 }
 
 /*----------------------*/
@@ -277,13 +277,38 @@ body {
   left: 129px;
 }
 
-.musics-library .overlap {
+.musics-library .overlap { /* LIST 1 */
   position: relative;
   width: 569px;
   height: 273px;
   background-color: #006134;
   border-radius: 26px;
 }
+
+.musics-library .overlap-wrapper { /* LIST 2 */
+  top: 323px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .overlap-group-wrapper { /* LIST 13 */
+  top: 2087px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .div-wrapper { /* LIST 14 */
+  top: 2087px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
 
 .musics-library .rectangle {
   position: absolute;
@@ -346,29 +371,6 @@ body {
   line-height: normal;
 }
 
-.musics-library .overlap-wrapper {
-  top: 323px;
-  left: 741px;
-  position: absolute;
-  width: 575px;
-  height: 273px;
-}
-
-.musics-library .overlap-group-wrapper {
-  top: 2087px;
-  left: 129px;
-  position: absolute;
-  width: 575px;
-  height: 273px;
-}
-
-.musics-library .div-wrapper {
-  top: 2087px;
-  left: 741px;
-  position: absolute;
-  width: 575px;
-  height: 273px;
-}
 
 .musics-library .list-2 {
   top: 911px;
