--- a/musiclib_main.css
+++ b/musiclib_main.css
@@ -274,12 +274,25 @@ body {
   border-color: #d9d9d9;
 }
 
+.musics-library .buttontextstyle { /* Button Text Styles*/
+  position: absolute;
+  width: 80px;
+  top: 4px;
+  left: 39px;
+  font-family: 'redhatdispB',sans-serif;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 24px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
 .musics-library .songtitle_style { /*Song Title*/
   position: absolute;
   width: 262px;
   top: 52px;
   left: 285px;
-  font-family: 'redhatdispBLK',sans-serif;
+  font-family: 'redhatdispB',sans-serif;
   font-weight: 400;
   color: #ffffff;
   font-size: 40px;
@@ -292,7 +305,7 @@ body {
   width: 135px;
   top: 162px;
   left: 285px;
-  font-family: 'redhatdispBLK',sans-serif;
+  font-family: 'redhatdispI',sans-serif;
   font-weight: 400;
   color: #ffffff;
   font-size: 24px;
@@ -355,19 +368,6 @@ body {
   position: absolute;
   width: 575px;
   height: 273px;
-}
-
-.musics-library .text-wrapper-7 {
-  position: absolute;
-  width: 80px;
-  top: 4px;
-  left: 39px;
-  font-family: 'redhatdispBLK',sans-serif;
-  font-weight: 400;
-  color: #ffffff;
-  font-size: 24px;
-  letter-spacing: 0;
-  line-height: normal;
 }
 
 .musics-library .list-2 {
