--- a/m01.css
+++ b/m01.css
@@ -216,7 +216,8 @@ a:link {
 
   #audiop {
     position: absolute;
-    left: 20%;
+    width: 100%;
+    height: 80px;
   }
   
   .musics-library .rectangle-2 {
