--- a/m01.css
+++ b/m01.css
@@ -205,19 +205,20 @@ a:link {
   .musics-library .rectangle {
     position: absolute;
     width: 636px;
-    height: 110px;
+    height: 70px;
     top: 390px;
     left: 0;
-    background-color: #006134;
+    background-color: #ffffff;
     border-radius: 26px;
     border: 3px solid;
-    border-color: #ffffff;
+    border-color: #006134;
   }
 
   #audiop {
     position: absolute;
-    width: 100%;
-    height: 80px;
+    padding-left: 5px;
+    width: 98%;
+    height: 63px;
   }
   
   .musics-library .rectangle-2 {
