--- a/musiclib_main.css
+++ b/musiclib_main.css
@@ -108,7 +108,7 @@ body {
   background-color: #000000;
   overflow: hidden;
   width: 1440px;
-  height: 3315px;
+  height: 3600px;
   position: relative;
 }
 
@@ -673,6 +673,22 @@ body {
 
 .musics-library .list-17 {
   top: 2381px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list21 {
+  top: 3270px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list22 {
+  top: 3270px;
   left: 741px;
   position: absolute;
   width: 575px;
