--- a/musiclib_main.css
+++ b/musiclib_main.css
@@ -108,7 +108,7 @@ body {
   background-color: #000000;
   overflow: hidden;
   width: 1440px;
-  height: 3600px;
+  height: 4800px;
   position: relative;
 }
 
@@ -694,3 +694,68 @@ body {
   width: 575px;
   height: 273px;
 }
+
+.musics-library .list23 {
+  top: 3570px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list24 {
+  top: 3570px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list25 {
+  top: 3870px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list26 {
+  top: 3870px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list27 {
+  top: 4170px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list28 {
+  top: 4170px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list29 {
+  top: 4470px;
+  left: 129px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
+.musics-library .list30 {
+  top: 4470px;
+  left: 741px;
+  position: absolute;
+  width: 575px;
+  height: 273px;
+}
+
